rename next-card, lite-image, activities-card, btn-wishlist, link

--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -189,9 +189,9 @@
                                     aria-busy="false"
                                     aria-label="Cover photo"
                                   >
-                                    <div class="lite-image__wrapper">
+                                    <div class="lite-image__container">
                                       <img
-                                        class="lite-image__default"
+                                        class="lite-image__default-static"
                                         style="
                                           object-fit: cover;
                                           border-radius: 24px 24px 0px 0px;
