--- a/contact-host.html
+++ b/contact-host.html
@@ -786,7 +786,7 @@
                                                     role="tab"
                                                     aria-selected="true"
                                                     type="button"
-                                                    class="_1yydbd74"
+                                                    class="link"
                                                   >
                                                     <div class="_3i1l2kz">
                                                       <span class="inline-block"
@@ -807,7 +807,7 @@
                                                     role="tab"
                                                     aria-selected="false"
                                                     type="button"
-                                                    class="_1yydbd74"
+                                                    class="link"
                                                   >
                                                     <div class="_882esz">
                                                       <span class="inline-block"
@@ -820,7 +820,7 @@
                                               <div class="inline-block">
                                                 <a
                                                   href="/s/experiences/online"
-                                                  class="_1yydbd74"
+                                                  class="link"
                                                   ><div class="_1igwknb5">
                                                     <div class="_882esz">
                                                       Online Experiences
