--- a/covidsafety.html
+++ b/covidsafety.html
@@ -156,9 +156,9 @@
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="lite-image__wrapper">
+                                                    <div class="lite-image__container">
                                                       <img
-                                                        class="lite-image__default"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -237,9 +237,9 @@
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="lite-image__wrapper">
+                                                    <div class="lite-image__container">
                                                       <img
-                                                        class="lite-image__default"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -337,9 +337,9 @@
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="lite-image__wrapper">
+                                                    <div class="lite-image__container">
                                                       <img
-                                                        class="lite-image__default"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -417,9 +417,9 @@
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="lite-image__wrapper">
+                                                    <div class="lite-image__container">
                                                       <img
-                                                        class="lite-image__default"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
