--- a/help.html
+++ b/help.html
@@ -88,7 +88,7 @@
                               aria-label="Choose a language and currency"
                               data-testid="locale-trigger"
                               type="button"
-                              class="_1qi0sj8"
+                              class="btn-wishlist"
                             >
                               <span class="_e296pg"
                                 ><div
