--- a/merchandising.html
+++ b/merchandising.html
@@ -4386,7 +4386,7 @@
                                                                 aria-selected="true"
                                                                 aria-controls="search-tabpanel"
                                                                 type="button"
-                                                                class="_1yydbd74"
+                                                                class="link"
                                                               >
                                                                 <div
                                                                   class="_3i1l2kz"
@@ -4413,7 +4413,7 @@
                                                                 aria-selected="false"
                                                                 aria-controls="search-tabpanel"
                                                                 type="button"
-                                                                class="_1yydbd74"
+                                                                class="link"
                                                               >
                                                                 <div
                                                                   class="_882esz"
@@ -4429,7 +4429,7 @@
                                                           <div class="inline-block">
                                                             <a
                                                               href="/s/experiences/online"
-                                                              class="_1yydbd74"
+                                                              class="link"
                                                               ><div
                                                                 class="_1igwknb5"
                                                               >
@@ -5562,7 +5562,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6146,7 +6146,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6346,7 +6346,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_i5m7e6w">
+                                                <div class="d-none d-xl-block">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -6716,7 +6716,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <a
                                                       href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -7228,7 +7228,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <a
                                                       href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -7739,7 +7739,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <a
                                                       href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -8250,7 +8250,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <a
                                                       href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -8498,7 +8498,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_i5m7e6w">
+                                                <div class="d-none d-xl-block">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -8887,7 +8887,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_i5m7e6w">
+                                                    <div class="d-none d-xl-block">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -9412,7 +9412,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_i5m7e6w">
+                                                    <div class="d-none d-xl-block">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -9936,7 +9936,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_i5m7e6w">
+                                                    <div class="d-none d-xl-block">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -10460,7 +10460,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_i5m7e6w">
+                                                    <div class="d-none d-xl-block">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -10727,7 +10727,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_i5m7e6w">
+                                              <div class="d-none d-xl-block">
                                                 <div
                                                   class="flex-column"
                                                   style="padding-bottom: 48px"
@@ -11055,7 +11055,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11448,7 +11448,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11976,7 +11976,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -12486,7 +12486,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_i5m7e6w">
+                                                  <div class="d-none d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
