--- a/payment.html
+++ b/payment.html
@@ -110,7 +110,7 @@
                                             <section>
                                               <div class="_1nobabx">
                                                 <div class="_1b5xz5">
-                                                  <a href="/" class="_1qi0sj8"
+                                                  <a href="/" class="btn-wishlist"
                                                     ><span class="_e296pg"
                                                       ><svg
                                                         viewBox="0 0 32 32"
