--- a/places.html
+++ b/places.html
@@ -263,9 +263,9 @@
                                     aria-busy="false"
                                     aria-label="Photo of Nobu Malibu in Eastern Malibu"
                                   >
-                                    <div class="lite-image__wrapper">
+                                    <div class="lite-image__container">
                                       <img
-                                        class="lite-image__default"
+                                        class="lite-image__default-static"
                                         aria-hidden="true"
                                         alt="Photo of Nobu Malibu in Eastern Malibu"
                                         decoding="async"
@@ -297,9 +297,9 @@
                                       --dls-liteimage-padding-top: 66.6667%;
                                     "
                                   >
-                                    <div class="lite-image__wrapper">
+                                    <div class="lite-image__container">
                                       <img
-                                        class="lite-image__default"
+                                        class="lite-image__default-static"
                                         aria-hidden="true"
                                         alt=""
                                         decoding="async"
@@ -330,9 +330,9 @@
                                       --dls-liteimage-padding-top: 66.6667%;
                                     "
                                   >
-                                    <div class="lite-image__wrapper">
+                                    <div class="lite-image__container">
                                       <img
-                                        class="lite-image__default"
+                                        class="lite-image__default-static"
                                         aria-hidden="true"
                                         alt=""
                                         decoding="async"
@@ -1054,7 +1054,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="c1x635tr dir dir-ltr"
+                                                      class="activities-card__lite-image-wrapper dir dir-ltr"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -1062,7 +1062,7 @@
                                                           --dls-liteimage-padding-top: 133.333%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture>
                                                             <source
                                                               srcset="
@@ -1089,7 +1089,7 @@
                                                               media="(min-width: 1439.1px)"
                                                             />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               style="
                                                                 object-fit: cover;
                                                               "
@@ -1253,15 +1253,15 @@
                                                   >
                                                 </div>
                                                 <div
-                                                  class="p1h685x0 pntik8o dir dir-ltr"
+                                                  class="activities-card__price-info pntik8o dir dir-ltr"
                                                   style="--margin-top: 6px"
                                                 >
                                                   <span
                                                     ><span
-                                                      class="f13o420o dir dir-ltr"
+                                                      class="activities-card__starting-price dir dir-ltr"
                                                       >From
                                                       <span
-                                                        class="p1iotb8f dir dir-ltr"
+                                                        class="activities-card__price dir dir-ltr"
                                                         ><span
                                                           class="a8jt5op dir dir-ltr"
                                                           >Price:</span
@@ -1310,7 +1310,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="c1x635tr dir dir-ltr"
+                                                      class="activities-card__lite-image-wrapper dir dir-ltr"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -1318,7 +1318,7 @@
                                                           --dls-liteimage-padding-top: 133.3333%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture>
                                                             <source
                                                               srcset="
@@ -1345,7 +1345,7 @@
                                                               media="(min-width: 1439.1px)"
                                                             />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               style="
                                                                 object-fit: cover;
                                                               "
@@ -1509,15 +1509,15 @@
                                                   >
                                                 </div>
                                                 <div
-                                                  class="p1h685x0 pntik8o dir dir-ltr"
+                                                  class="activities-card__price-info pntik8o dir dir-ltr"
                                                   style="--margin-top: 6px"
                                                 >
                                                   <span
                                                     ><span
-                                                      class="f13o420o dir dir-ltr"
+                                                      class="activities-card__starting-price dir dir-ltr"
                                                       >From
                                                       <span
-                                                        class="p1iotb8f dir dir-ltr"
+                                                        class="activities-card__price dir dir-ltr"
                                                         ><span
                                                           class="a8jt5op dir dir-ltr"
                                                           >Price:</span
@@ -1566,7 +1566,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="c1x635tr dir dir-ltr"
+                                                      class="activities-card__lite-image-wrapper dir dir-ltr"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -1574,7 +1574,7 @@
                                                           --dls-liteimage-padding-top: 133.3333%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture>
                                                             <source
                                                               srcset="
@@ -1601,7 +1601,7 @@
                                                               media="(min-width: 1439.1px)"
                                                             />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               style="
                                                                 object-fit: cover;
                                                               "
@@ -1765,15 +1765,15 @@
                                                   >
                                                 </div>
                                                 <div
-                                                  class="p1h685x0 pntik8o dir dir-ltr"
+                                                  class="activities-card__price-info pntik8o dir dir-ltr"
                                                   style="--margin-top: 6px"
                                                 >
                                                   <span
                                                     ><span
-                                                      class="f13o420o dir dir-ltr"
+                                                      class="activities-card__starting-price dir dir-ltr"
                                                       >From
                                                       <span
-                                                        class="p1iotb8f dir dir-ltr"
+                                                        class="activities-card__price dir dir-ltr"
                                                         ><span
                                                           class="a8jt5op dir dir-ltr"
                                                           >Price:</span
