--- a/products.html
+++ b/products.html
@@ -381,7 +381,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -447,7 +447,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -465,7 +465,7 @@
                                                               "
                                                               media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               aria-hidden="true"
                                                               alt="Show all photos"
                                                               elementtiming="LCP-target"
@@ -511,7 +511,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -529,7 +529,7 @@
                                                               "
                                                               media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               aria-hidden="true"
                                                               alt="Show all photos"
                                                               elementtiming="LCP-target"
@@ -1342,7 +1342,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -1360,7 +1360,7 @@
                                                               "
                                                               media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                             <img
-                                                              class="_1cb9q3xq"
+                                                              class="lite-image__default"
                                                               aria-hidden="true"
                                                               alt="Show all photos"
                                                               elementtiming="LCP-target"
@@ -6669,7 +6669,7 @@
                                               <div class="block">
                                                 <button
                                                   type="button"
-                                                  class="_1yydbd74"
+                                                  class="link"
                                                 >
                                                   <section>
                                                     <div
@@ -6740,7 +6740,7 @@
                                                   </section></button
                                                 ><button
                                                   type="button"
-                                                  class="_1yydbd74"
+                                                  class="link"
                                                 >
                                                   <section>
                                                     <div
@@ -6813,7 +6813,7 @@
                                                   </section></button
                                                 ><button
                                                   type="button"
-                                                  class="_1yydbd74"
+                                                  class="link"
                                                 >
                                                   <section>
                                                     <div
@@ -7818,7 +7818,7 @@
                                                     role="tab"
                                                     aria-selected="true"
                                                     type="button"
-                                                    class="_1yydbd74"
+                                                    class="link"
                                                   >
                                                     <div class="_3i1l2kz">
                                                       <span class="inline-block"
@@ -7839,7 +7839,7 @@
                                                     role="tab"
                                                     aria-selected="false"
                                                     type="button"
-                                                    class="_1yydbd74"
+                                                    class="link"
                                                   >
                                                     <div class="_882esz">
                                                       <span class="inline-block"
@@ -7852,7 +7852,7 @@
                                               <div class="inline-block">
                                                 <a
                                                   href="/s/experiences/online"
-                                                  class="_1yydbd74"
+                                                  class="link"
                                                   ><div class="_1igwknb5">
                                                     <div class="_882esz">
                                                       Online Experiences
@@ -9054,7 +9054,7 @@
                                                   <div class="_14f4nnk">
                                                     <button
                                                       type="button"
-                                                      class="_1yydbd74"
+                                                      class="link"
                                                     >
                                                       <div class="_11g6x33">
                                                         Photos
@@ -9064,7 +9064,7 @@
                                                   <div class="_14f4nnk">
                                                     <button
                                                       type="button"
-                                                      class="_1yydbd74"
+                                                      class="link"
                                                     >
                                                       <div class="_11g6x33">
                                                         Amenities
@@ -9074,7 +9074,7 @@
                                                   <div class="_14f4nnk">
                                                     <button
                                                       type="button"
-                                                      class="_1yydbd74"
+                                                      class="link"
                                                     >
                                                       <div class="_11g6x33">
                                                         Reviews
@@ -9084,7 +9084,7 @@
                                                   <div class="_14f4nnk">
                                                     <button
                                                       type="button"
-                                                      class="_1yydbd74"
+                                                      class="link"
                                                     >
                                                       <div class="_11g6x33">
                                                         Location
@@ -13777,7 +13777,7 @@
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
-                                                            class="_1qi0sj8"
+                                                            class="btn-wishlist"
                                                           >
                                                             <span
                                                               class="_e296pg"
@@ -16288,7 +16288,7 @@
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
-                                                            class="_1qi0sj8"
+                                                            class="btn-wishlist"
                                                           >
                                                             <span
                                                               class="_e296pg"
