--- a/profile.html
+++ b/profile.html
@@ -1274,10 +1274,10 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                               "
                                                             >
                                                               <div
-                                                                class="lite-image__wrapper"
+                                                                class="lite-image__container"
                                                               >
                                                                 <img
-                                                                  class="lite-image__default"
+                                                                  class="lite-image__default-static"
                                                                   aria-hidden="true"
                                                                   alt=""
                                                                   decoding="async"
@@ -1315,11 +1315,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           </div>
                                                         </div>
                                                         <div
-                                                          class="activities-card__ratings c13dz2y3 dir dir-ltr"
+                                                          class="activities-card__ratings activities-card__text-sm dir dir-ltr"
                                                         >
                                                           <span
                                                             aria-label="Rating 5.0 out of 5; 1 reviews"
-                                                            class="sftrzuu activities-card__ratings-container dir dir-ltr"
+                                                            class="activities-card__text-sm activities-card__ratings-container dir dir-ltr"
                                                             role="img"
                                                             ><span
                                                               class="activities-card__ratings-icon-wrapper dir dir-ltr"
@@ -1352,12 +1352,12 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           >
                                                           <div
                                                             aria-hidden="true"
-                                                            class="ststif dir dir-ltr"
+                                                            class="activities-card__separator dir dir-ltr"
                                                           >
                                                             ·
                                                           </div>
                                                           <div
-                                                            class="mivm6tg mig889x dir dir-ltr"
+                                                            class="activities-card__location activities-card__location--small dir dir-ltr"
                                                           >
                                                             Food processing
                                                           </div>
@@ -1369,7 +1369,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           "
                                                         >
                                                           <span
-                                                            class="activities-card__title-fw t1e6bw26 dir dir-ltr"
+                                                            class="activities-card__title-fw activities-card__title-sm dir dir-ltr"
                                                             style="
                                                               --title_font-weight: var(
                                                                 --e-y-j-d-v-j
@@ -2396,9 +2396,9 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           --dls-liteimage-padding-top: 133.3333%;
                                                         "
                                                       >
-                                                        <div class="lite-image__wrapper">
+                                                        <div class="lite-image__container">
                                                           <img
-                                                            class="lite-image__default"
+                                                            class="lite-image__default-static"
                                                             style="
                                                               object-fit: cover;
                                                             "
@@ -2504,12 +2504,12 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     >
                                                     <div
                                                       aria-hidden="true"
-                                                      class="ststif dir dir-ltr"
+                                                      class="activities-card__separator dir dir-ltr"
                                                     >
                                                       ·
                                                     </div>
                                                     <div
-                                                      class="mivm6tg dir dir-ltr"
+                                                      class="activities-card__location dir dir-ltr"
                                                     >
                                                       Food processing
                                                     </div>
