--- a/transaction_history.html
+++ b/transaction_history.html
@@ -140,7 +140,7 @@
                                     >
                                       <div class="_1cu8ql8">
                                         <div class="inline-block">
-                                          <a href="/hosting" class="_1yydbd74"
+                                          <a href="/hosting" class="link"
                                             ><div class="_1wxj0qrv">
                                               <div class="dir dir-ltr">
                                                 Today
@@ -151,7 +151,7 @@
                                         <div class="inline-block">
                                           <a
                                             href="/hosting/inbox"
-                                            class="_1yydbd74"
+                                            class="link"
                                             ><div class="_1wxj0qrv">
                                               <div class="dir dir-ltr">
                                                 Inbox
@@ -162,7 +162,7 @@
                                         <div class="inline-block">
                                           <a
                                             href="/calendar-router"
-                                            class="_1yydbd74"
+                                            class="link"
                                             ><div class="_1wxj0qrv">
                                               <div class="dir dir-ltr">
                                                 Calendar
@@ -174,7 +174,7 @@
                                           <a
                                             aria-current="page"
                                             href="/progress/opportunity-hub"
-                                            class="_1yydbd74"
+                                            class="link"
                                             ><div class="_192v41sf">
                                               <div class="dir dir-ltr">
                                                 Insights
