--- a/notifications.html
+++ b/notifications.html
@@ -422,9 +422,9 @@
                                                 --dls-liteimage-padding-top: 100%;
                                               "
                                             >
-                                              <div class="lite-image__wrapper">
+                                              <div class="lite-image__container">
                                                 <img
-                                                  class="lite-image__default"
+                                                  class="lite-image__default-static"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -504,9 +504,9 @@
                                                 --dls-liteimage-padding-top: 100%;
                                               "
                                             >
-                                              <div class="lite-image__wrapper">
+                                              <div class="lite-image__container">
                                                 <img
-                                                  class="lite-image__default"
+                                                  class="lite-image__default-static"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
