--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1066,9 +1066,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="lite-image__wrapper">
+                              <div class="lite-image__container">
                                 <img
-                                  class="lite-image__default"
+                                  class="lite-image__default-static"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
